working mrcnn tf1.14

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,129 @@
-numpy
-scipy
-Pillow
-cython
-matplotlib
-scikit-image
-tensorflow>=1.3.0
-keras>=2.0.8
-opencv-python
-h5py
-imgaug
-IPython[all]
+absl-py==2.0.0
+alabaster==0.7.13
+anyio==3.7.1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+astor==0.8.1
+attrs==23.1.0
+Babel==2.13.1
+backcall==0.2.0
+beautifulsoup4==4.12.2
+bleach==6.0.0
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.3.2
+colorama==0.4.6
+comm==0.1.4
+cycler==0.11.0
+Cython==3.0.5
+debugpy==1.7.0
+decorator==5.1.1
+defusedxml==0.7.1
+docutils==0.19
+entrypoints==0.4
+exceptiongroup==1.1.3
+fastjsonschema==2.18.1
+fonttools==4.38.0
+gast==0.5.4
+google-pasta==0.2.0
+grpcio==1.59.2
+h5py==2.10.0
+idna==3.4
+imageio==2.31.2
+imagesize==1.4.1
+imgaug==0.4.0
+importlib-metadata==6.7.0
+importlib-resources==5.12.0
+ipykernel==6.16.2
+ipyparallel==8.6.1
+ipython==7.34.0
+ipython-genutils==0.2.0
+ipywidgets==8.1.1
+jedi==0.19.1
+Jinja2==3.1.2
+jsonschema==4.17.3
+jupyter-server==1.24.0
+jupyter_client==7.4.9
+jupyter_core==4.12.0
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.9
+Keras==2.2.4
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.5
+Markdown==3.4.4
+MarkupSafe==2.1.3
+matplotlib==3.5.3
+matplotlib-inline==0.1.6
+mistune==3.0.2
+nbclassic==1.0.0
+nbclient==0.7.4
+nbconvert==7.6.0
+nbformat==5.8.0
+nest-asyncio==1.5.8
+networkx==2.6.3
+nose==1.3.7
+notebook==6.5.6
+notebook_shim==0.2.3
+numpy==1.21.6
+opencv-python==4.8.1.78
+packaging==23.2
+pandocfilters==1.5.0
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.5.0
+pkgutil_resolve_name==1.3.10
+prometheus-client==0.17.1
+prompt-toolkit==3.0.39
+protobuf==3.20.0
+psutil==5.9.6
+pycparser==2.21
+Pygments==2.16.1
+pyparsing==3.1.1
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyWavelets==1.3.0
+pywin32==306
+pywinpty==2.0.10
+PyYAML==6.0.1
+pyzmq==25.1.1
+qtconsole==5.4.4
+QtPy==2.4.1
+requests==2.31.0
+scikit-image==0.16.2
+scipy==1.7.3
+Send2Trash==1.8.2
+shapely==2.0.2
+six==1.16.0
+sniffio==1.3.0
+snowballstemmer==2.2.0
+soupsieve==2.4.1
+Sphinx==5.3.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+tensorboard==1.14.0
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
+tensorflow-gpu==1.14.0
+termcolor==2.3.0
+terminado==0.17.1
+testpath==0.6.0
+tifffile==2021.11.2
+tinycss2==1.2.1
+tornado==6.2
+tqdm==4.66.1
+traitlets==5.9.0
+typing_extensions==4.7.1
+urllib3==2.0.7
+wcwidth==0.2.9
+webencodings==0.5.1
+websocket-client==1.6.1
+Werkzeug==2.2.3
+widgetsnbextension==4.0.9
+wrapt==1.15.0
+zipp==3.15.0
