--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ pyparsing==3.1.1
 python-dateutil==2.8.2
 PyWavelets==1.1.1
 PyYAML==5.3.1
-scikit-image==0.18.1
+scikit-image==0.16.2
 scipy==1.4.1
 Shapely==1.7.1
 six==1.16.0
@@ -54,3 +54,4 @@ wcwidth==0.2.12
 Werkzeug==2.1.2
 wrapt==1.16.0
 zipp==3.15.0
+pandas==1.1.5
